--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
   <description>GraphQL sample app with spring boot</description>
   <properties>
     <java.version>16</java.version>
+    <!-- TODO - need this? -->
+    <kotlin.version>1.3.70</kotlin.version>
   </properties>
   <dependencies>
     <dependency>
@@ -24,30 +26,36 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.graphql-java</groupId>
-      <artifactId>graphql-spring-boot-starter</artifactId>
-      <version>5.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.graphql-java</groupId>
-      <artifactId>graphql-java-tools</artifactId>
-      <version>5.2.4</version>
-    </dependency>
-    <dependency>
-      <groupId>com.graphql-java</groupId>
-      <artifactId>graphiql-spring-boot-starter</artifactId>
-      <version>5.0.2</version>
+      <!-- TODO - remove version -->
+      <version>2.5.2</version>
     </dependency>
 
+    <!-- GraphQL -->
+<!--    <dependency>-->
+<!--      <groupId>com.graphql-java</groupId>-->
+<!--      <artifactId>graphql-java</artifactId>-->
+<!--      <version>15.0</version>-->
+<!--    </dependency>-->
+    <dependency>
+      <groupId>com.graphql-java</groupId>
+      <artifactId>graphql-java-spring-boot-starter-webmvc</artifactId>
+      <version>2.0</version>
+    </dependency>
 
+    <!-- Misc -->
+    <!-- TODO - need guava? -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.1-jre</version>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
 
+    <!-- Test -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
